--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/Modificar.cshtml
@@ -20,9 +20,11 @@
         </div>
 
     }
-    @Html.HiddenFor(q => q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdTipoCbte)
     @Html.HiddenFor(q => q.IdCbteCble)
+    
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-2">
