--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/_GridViewPartial_comprobante_detalle_readonly.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/_GridViewPartial_comprobante_detalle_readonly.cshtml
@@ -76,6 +76,7 @@
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_Valor_debe").DisplayFormat = "Debe {0:c2}";
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_Valor_haber").DisplayFormat = "Haber {0:c2}";
         settings.Settings.ShowFooter = true;
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 
 }
