--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Anular.cshtml
@@ -11,7 +11,8 @@
 
 @using (Html.BeginForm("Anular", "CajaMovimientoEgreso", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    @Html.HiddenFor(q => q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdCbteCble)
     @Html.HiddenFor(q => q.IdTipocbte)
 
@@ -148,9 +149,11 @@
         var monto = $("#cr_Valor").val();
 
         var datos = {
+            IdEmpresa = $("#IdEmpresa").val(),
             IdCaja: caja,
             IdTipoMovi: tipo_movimiento,
-            valor: monto
+            valor: monto,
+            IdTransaccionSession: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
