--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_005.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_005.cshtml
@@ -85,7 +85,7 @@
                             <label for="mostrar_detallado">@Html.CheckBoxFor(q => q.mostrar_detallado) Mostrar detallado</label>
                         </div>
                         <div class="checkbox">
-                            <label for="no_mostrar_valores_en_0">@Html.CheckBoxFor(q => q.no_mostrar_valores_en_0) Mostrar saldo 0</label>
+                            <label for="no_mostrar_valores_en_0">@Html.CheckBoxFor(q => q.no_mostrar_valores_en_0) No mostrar saldo 0</label>
                         </div>
                     </div>
                 </div>
