--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_005.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_005.cshtml
@@ -44,10 +44,22 @@
                         @Html.ValidationMessageFor(q => q.IdBodega, "", new { @class = "text-danger" })
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label for="IdProductoPadre">Producto padre</label>
+                        @Html.Partial("_CmbProductoPadre_Inventario", Model)
+                        @Html.ValidationMessageFor(q => q.IdProductoPadre, "", new { @class = "text-danger" })
+                    </div>
+                </div>
                 <div class="col-md-4">
                     <div class="form-group">
                         <label for="IdProducto">Producto </label>
-                        @Html.Partial("_CmbProductoPadre_Inventario", Model)
+                        @Html.Partial("_CmbProducto_Inventario", Model)
                         @Html.ValidationMessageFor(q => q.IdProducto, "", new { @class = "text-danger" })
                     </div>
                 </div>
