--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Modificar.cshtml
@@ -83,32 +83,32 @@
     @Html.HiddenFor(q => q.IdCbteCble_Nota)
     @Html.HiddenFor(q => q.IdTipoCbte_Nota)
 
-    <div class="row">
-        <div class="col-md-6">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="IdSucursal">Sucursal*</label>
-                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursales, "IdSucursal", "Su_descripcion"), new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="IdProveedor">Proveedor</label>
-                    @Html.Partial("_CmbProveedor_CXP", Model)
-                    @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
-                </div>
+<div class="row">
+    <div class="col-md-6">
+        <div class="col-md-12">
+            <div class="form-group">
+                <label for="IdSucursal">Sucursal*</label>
+                @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursales, "IdSucursal", "Su_descripcion"), new { @class = "form-control" })
+                @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        <div class="col-md-3">
+        <div class="col-md-12">
+            <div class="form-group">
+                <label for="IdProveedor">Proveedor</label>
+                @Html.Partial("_CmbProveedor_CXP", Model)
+                @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="col-md-6">
             <div class="form-group">
                 <label for="IdOrden_giro_Tipo">Tipo nota*</label>
                 @Html.DropDownListFor(q => q.IdTipoNota, new SelectList(ViewBag.lst_tipo_nota, "Key", "Value"), new { @class = "form-control", @id = "IdTipoNota" })
                 @Html.ValidationMessageFor(q => q.IdTipoNota, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6">
             <div class="form-group">
                 <label for="cn_fecha">Fecha documentos*</label>
                 <div class="input-group date">
@@ -120,7 +120,9 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-3">
+    </div>
+    <div class="col-md-6">
+        <div class="col-md-6">
             <div class="form-group">
                 <label for="Fecha_contable">Fecha contabilización*</label>
                 <div class="input-group date">
@@ -132,7 +134,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6">
             <div class="form-group">
                 <label for="cn_Fecha_vcto">Fecha vencimiento*</label>
                 <div class="input-group date">
@@ -145,6 +147,7 @@
             </div>
         </div>
     </div>
+</div>
     <div class="row" id="div_tipo">
         <div class="col-md-12">
             <div class="col-md-2">
@@ -258,7 +261,7 @@
                         <div class="col-md-5">
                             <div class="form-group">
                                 <label for="IdOrden_giro_Tipo">Sustento tributario*</label>
-                                @Html.DropDownListFor(q => q.IdTipoNota, new SelectList(ViewBag.lst_codigos_sri, "codigoSRI", "co_descripcion"), new { @class = "form-control", @id = "cmb_idtCredito" })
+                                @Html.DropDownListFor(q => q.IdTipoNota, new SelectList(ViewBag.lst_codigos_sri, "codigoSRI", "co_descripcion"), new { @class = "form-control", @id = "IdTipoNota" })
                                 @Html.ValidationMessageFor(q => q.IdTipoNota, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -272,7 +275,7 @@
                         <div class="col-md-2">
                             <div class="form-group">
                                 <label for="cn_tipoLocacion">Tipo localización*</label>
-                                @Html.DropDownListFor(q => q.cn_tipoLocacion, new SelectList(ViewBag.lst_localizacion, "Key", "Value"), new { @class = "form-control", @id = "cmb_idtCredito" })
+                                @Html.DropDownListFor(q => q.cn_tipoLocacion, new SelectList(ViewBag.lst_localizacion, "Key", "Value"), new { @class = "form-control", @id = "cn_tipoLocacion" })
                                 @Html.ValidationMessageFor(q => q.cn_tipoLocacion, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -312,7 +315,7 @@
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="PagoLocExt">Pago local o exterior*</label>
-                                @Html.DropDownListFor(q => q.PagoLocExt, new SelectList(ViewBag.lst_localizacion, "Key", "Value"), new { @class = "form-control", @id = "cmb_idtCredito" })
+                                @Html.DropDownListFor(q => q.PagoLocExt, new SelectList(ViewBag.lst_localizacion, "Key", "Value"), new { @class = "form-control", @id = "PagoLocExt" })
                                 @Html.ValidationMessageFor(q => q.PagoLocExt, "", new { @class = "text-danger" })
                             </div>
                         </div>
