--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Nuevo.cshtml
@@ -264,8 +264,8 @@
                         <div class="col-md-5">
                             <div class="form-group">
                                 <label for="IdOrden_giro_Tipo">Sustento tributario*</label>
-                                @Html.DropDownListFor(q => q.IdTipoNota, new SelectList(ViewBag.lst_codigos_sri, "codigoSRI", "co_descripcion"), new { @class = "form-control", @id = "cmb_idtCredito" })
-                                @Html.ValidationMessageFor(q => q.IdTipoNota, "", new { @class = "text-danger" })
+                                @Html.DropDownListFor(q => q.IdIden_credito, new SelectList(ViewBag.lst_codigos_sri, "codigoSRI", "co_descripcion"), new { @class = "form-control", @id = "cmb_idtCredito" })
+                                @Html.ValidationMessageFor(q => q.IdIden_credito, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="col-md-2">
@@ -278,7 +278,7 @@
                         <div class="col-md-2">
                             <div class="form-group">
                                 <label for="cn_tipoLocacion">Tipo localización*</label>
-                                @Html.DropDownListFor(q => q.cn_tipoLocacion, new SelectList(ViewBag.lst_localizacion, "Key", "Value"), new { @class = "form-control", @id = "cmb_idtCredito" })
+                                @Html.DropDownListFor(q => q.cn_tipoLocacion, new SelectList(ViewBag.lst_localizacion, "Key", "Value"), new { @class = "form-control", @id = "cn_tipoLocacion" })
                                 @Html.ValidationMessageFor(q => q.cn_tipoLocacion, "", new { @class = "text-danger" })
                             </div>
                         </div>
